# options-tracker

./: .env.dev.example  .env.example  .env.prod.example  .env.qa.example  .gitignore  CLAUDE.md  Makefile  PRD.md  SamoleTxnHistory.csv  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml  prompt.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/.claude/agent-memory/backend-tdd-api-dev/: MEMORY.md  project_classifier_conventions.md  project_csv_parser_conventions.md
backend/alembic/: env.py
backend/alembic/versions/: 20260330_a1b2c3d4e5f6_initial_schema.py  20260401_add_description_to_transactions.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  pnl.py  (+3 more)
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  enums.py  equity_position.py  options_position.py  options_position_leg.py  raw_transaction.py  transaction.py  upload.py
backend/app/repositories/: pnl_repository.py  position_repository.py  transaction_repository.py  upload_repository.py
backend/app/schemas/: pnl.py  position.py  transaction.py  upload.py
backend/app/services/: classifier.py  covered_call.py  deduplicator.py  matcher.py  pnl.py  upload_orchestrator.py
backend/tests/: conftest.py
backend/tests/unit/: test_api.py  test_api_routers.py  test_classifier.py  test_config.py  test_covered_call.py  test_database.py  test_deduplicator.py  test_etrade_parser.py  test_health.py  test_matcher.py  test_models.py  test_pnl.py  test_repositories.py  test_schemas.py  test_upload_orchestrator.py
(+161 files in other folders)
